# ray-tracer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  bvh.hpp  camera.hpp  main.cpp  vec.hpp
include/: ray_tracer.hpp  util.hpp
include/geometry/: camera.hpp  geometry_util.hpp  ray.hpp  vec.hpp
include/hitable/: aabb.hpp  bvh.hpp  hitable.hpp  hitable_list.hpp  moving_sphere.hpp  sphere.hpp  triangle.hpp
include/material/: light.hpp  material.hpp
include/material/texture/: texture.hpp
src/: CMakeLists.txt  aabb.hpp  bvh.hpp  hitable.hpp  hitable_list.hpp  main.cpp  material.hpp  moving_sphere.hpp  ray.hpp  ray_tracer.hpp  sphere.hpp  texture.hpp  util.cpp  util.hpp
src/geometry/: camera.hpp  geometry_util.cpp  geometry_util.hpp  ray.hpp  vec.hpp
src/hitable/: aabb.hpp  bvh.hpp  hitable.hpp  moving_sphere.hpp  sphere.hpp  triangle.hpp
src/material/: light.hpp  material.hpp
src/material/texture/: perlin.hpp  texture.hpp
src/test/: CMakeLists.txt  unit_test.cpp
